--- a/src/main/resources/templates/system/index.html
+++ b/src/main/resources/templates/system/index.html
@@ -28,7 +28,7 @@
 <body>
 <header class="navbar-wrapper">
 	<div class="navbar navbar-fixed-top">
-		<div class="container-fluid cl"> <a class="logo navbar-logo f-l mr-10 hidden-xs" href="#">Sming System</a> <a class="logo navbar-logo-m f-l mr-10 visible-xs" href="#">SMSystem</a> 
+		<div class="container-fluid cl"> <a class="logo navbar-logo f-l mr-10 hidden-xs" href="#">SMing System</a> <a class="logo navbar-logo-m f-l mr-10 visible-xs" href="#">SMSystem</a> 
 			<span class="logo navbar-slogan f-l mr-10 hidden-xs">v1.0</span> 
 			<a aria-hidden="false" class="nav-toggle Hui-iconfont visible-xs" href="javascript:;">&#xe667;</a>
 			<!-- 
@@ -73,7 +73,8 @@
 
 <aside class="Hui-aside">
 	<div class="menu_dropdown bk_2">
-		<dl id="menu-article">
+	<!-- 
+	<dl id="menu-article">
 			<dt><i class="Hui-iconfont">&#xe616;</i> 资讯管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
 			<dd>
 				<ul>
@@ -88,14 +89,12 @@
 					<li><a data-href="picture-list.html" data-title="图片管理" href="javascript:void(0)">图片管理</a></li>
 			</ul>
 		</dd>
-	</dl>
+	</dl>  -->
 		<dl id="menu-product">
-			<dt><i class="Hui-iconfont">&#xe620;</i> 产品管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
+			<dt><i class="Hui-iconfont">&#xe620;</i> Accountant<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
 			<dd>
 				<ul>
-					<li><a data-href="product-brand.html" data-title="品牌管理" href="javascript:void(0)">品牌管理</a></li>
-					<li><a data-href="product-category.html" data-title="分类管理" href="javascript:void(0)">分类管理</a></li>
-					<li><a data-href="product-list.html" data-title="产品管理" href="javascript:void(0)">产品管理</a></li>
+					<li><a data-href="generalLedgerMaster" data-title="General Ledger" href="javascript:void(0)">General Ledger</a></li>
 			</ul>
 		</dd>
 	</dl>
@@ -104,7 +103,6 @@
 			<dd>
 				<ul>
 					<li><a data-href="tingkat/tingkatOrderMaster" data-title="Tingkat Order" href="javascript:;"> TingKat Order Master</a></li>
-					<li><a data-href="feedback-list.html" data-title="意见反馈" href="javascript:void(0)">意见反馈</a></li>
 			</ul>
 		</dd>
 	</dl>
@@ -113,12 +111,6 @@
 			<dd>
 				<ul>
 					<li><a data-href="customer/customerMaster" data-title="客户列表" href="javascript:;">Customer Master</a></li>
-					<li><a data-href="member-del.html" data-title="删除的会员" href="javascript:;">删除的会员</a></li>
-					<li><a data-href="member-level.html" data-title="等级管理" href="javascript:;">等级管理</a></li>
-					<li><a data-href="member-scoreoperation.html" data-title="积分管理" href="javascript:;">积分管理</a></li>
-					<li><a data-href="member-record-browse.html" data-title="浏览记录" href="javascript:void(0)">浏览记录</a></li>
-					<li><a data-href="member-record-download.html" data-title="下载记录" href="javascript:void(0)">下载记录</a></li>
-					<li><a data-href="member-record-share.html" data-title="分享记录" href="javascript:void(0)">分享记录</a></li>
 			</ul>
 		</dd>
 	</dl>
@@ -127,12 +119,12 @@
 			<dd>
 				<ul>
 					<li><a data-href="user/userMaster" data-title="User Master" href="javascript:void(0)">User Master</a></li>
-					<li><a data-href="admin-permission.html" data-title="权限管理" href="javascript:void(0)">权限管理</a></li>
-					<li><a data-href="admin-list.html" data-title="管理员列表" href="javascript:void(0)">管理员列表</a></li>
+					<li><a data-href="" data-title="System Role" href="javascript:void(0)">System Role</a></li>
 			</ul>
 		</dd>
 	</dl>
-		<dl id="menu-tongji">
+	<!-- 
+	<dl id="menu-tongji">
 			<dt><i class="Hui-iconfont">&#xe61a;</i> 系统统计<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
 			<dd>
 				<ul>
@@ -146,15 +138,12 @@
 			</ul>
 		</dd>
 	</dl>
-		<dl id="menu-system">
-			<dt><i class="Hui-iconfont">&#xe62e;</i> 系统管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
-			<dd>
-				<ul>
-					<li><a data-href="productMenuMaster" data-title="Product Menu" href="javascript:void(0)">Product Menu</a></li>
-					<li><a data-href="preSetRemarkMaster" data-title="PreSetRemark" href="javascript:void(0)">PreSetRemark</a></li>
-					<li><a data-href="system-data.html" data-title="数据字典" href="javascript:void(0)">数据字典</a></li>
-					<li><a data-href="system-shielding.html" data-title="屏蔽词" href="javascript:void(0)">屏蔽词</a></li>
-					<li><a data-href="system-log.html" data-title="系统日志" href="javascript:void(0)">系统日志</a></li>
+	 -->
+	<dl id="menu-system">
+		<dt><i class="Hui-iconfont">&#xe62e;</i> System Setup<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
+		<dd>
+			<ul>
+				<li><a data-href="systemParameterMaster" data-title="System Parameter Master" href="javascript:void(0)">System Parameter</a></li>
 			</ul>
 		</dd>
 	</dl>
