--- a/src/main/resources/templates/system/parameter/master.html
+++ b/src/main/resources/templates/system/parameter/master.html
@@ -28,6 +28,11 @@
 <div class="page-container">
 	<div class="text-c">
 	</div>
+	<div class="cl pd-5 bg-1 bk-gray mt-20"> 
+		<span class="l">
+		<a href="javascript:;" onclick="patchParameter()" class="btn btn-danger radius"><i class="Hui-iconfont">&#xe6e2;</i>Development Patch New Parameter</a> 
+		</span> 
+	</div>
 	<div class="mt-20">
 		<table id="table" class="table table-border table-bordered table-bg table-hover table-sort table-responsive">
 			<thead>
@@ -84,103 +89,23 @@ var table = $('.table-sort').DataTable({
 function refresh(){
 	location.replace(location.href);
 }
-/*添加 or 编辑*/
-function _add(obj, title, id){
-	layer.prompt({
-		  formType: 0, //输入框类型，支持0（文本）默认1（密码）2（多行文本）
-		  value: '初始值',
-		  title: title,
-		  area: ['400px', '180px'] //自定义文本域宽高
-		}, function(value, index, elem){
-			console.log(value, "=value");
-			//$.post(url,data,success(data, textStatus, jqXHR),dataType)
-			$.post("saveParameter", {id:id,keyValue:value}, function(data, textStatus, jqXHR){
-				console.log("data", data);
-				console.log("textStatus", textStatus);
-				console.log("jqXHR", jqXHR);
-				if(data.code == 101) { // 101 ajax error
-					layer.msg(data.message, {icon: 2, time:3000}, function(){layer.close(index)}); 
-				}else {
-					layer.msg("Successful", {icon:1, time:1000}, function(){
-						refresh();layer.close(index);
-					});
-				}
-			})
-			.error(function() { alert("error"); })
-		    .complete(function(event,xhr,options) { console.log(xhr)});
-		  	
-		});
+/* Development Patch new parameter*/
+function patchParameter(obj, title, id){
+	$.post("patchNewParameter",  function(data, textStatus, jqXHR){
+		console.log("data", data);
+		console.log("textStatus", textStatus);
+		console.log("jqXHR", jqXHR);
+		if(data.code == 101) { // 101 ajax error
+			layer.msg(data.message, {icon: 2, time:3000}, function(){layer.close()}); 
+		}else {
+			layer.msg("Successful", {icon:1, time:1000}, function(){
+				refresh();layer.close();
+			});
+		}
+	})
+	.error(function() { alert("error"); })
+    .complete(function(event,xhr,options) { console.log(xhr)});
 }
-/*编辑*/
-function _edit(title,url){
-	layer.prompt(function(value, index, elem){
-		  
-		  layer.close(index);
-		});
-	/* console.log(title, url);
-	layer_show(title,url); */
-	/* var index = layer.open({
-		type: 2,
-		title: title,
-		content: url
-	});
-	layer.full(index); */
-}
-/*批量删除
-function datadel(){
-	var ids='';
-	$("input[name='id']:checked").each(function () {
-        ids = ids + this.value + ",";
-    });
-	ids = ids.substring(0, ids.length-1)
-	console.log(ids, "ids");
-	if(ids == '') {
-		alert("Please select row to delete");
-	} else {
-		layer.confirm('确认要删除吗？',function(index){
-			$.ajax({
-				type: 'POST',
-				url: 'deleteUser?ids='+ids,
-				dataType: 'json',
-				success: function(data){
-					if(data.result) {
-						layer.msg('已删除!',{icon:1,time:1000},function(){
-							refresh();
-						});
-					} else {
-						layer.msg(data.msg,{icon:1,time:1000});
-					}
-					
-				},
-				error:function(data) {
-					console.log(data.msg);
-				},
-			});		
-		});
-	}
-}*/
-/*删除
-function menu_del(obj,id){
-	layer.confirm('确认要删除吗？',function(index){
-		$.ajax({
-			type: 'POST',
-			url: 'deleteUser?ids='+id,
-			dataType: 'json',
-			success: function(data){
-				if(data.result) {
-					$(obj).parents("tr").remove();
-					layer.msg('已删除!',{icon:1,time:1000});
-				} else {
-					layer.msg(data.msg,{icon:1,time:1000});
-				}
-				
-			},
-			error:function(data) {
-				console.log(data.msg);
-			},
-		});		
-	});
-} */
 
 </script> 
 </body>
