--- a/src/main/resources/templates/system/account/chartOfAccountMaster.html
+++ b/src/main/resources/templates/system/account/chartOfAccountMaster.html
@@ -32,6 +32,7 @@
 		<span class="l">
 		<a href="javascript:;" onclick="datadel()" class="btn btn-danger radius"><i class="Hui-iconfont">&#xe6e2;</i> Delete</a> 
 		<a href="javascript:;" onclick="_add('Add','chartOfAccountAdd?id=0')" class="btn btn-primary radius"><i class="Hui-iconfont">&#xe600;</i> Add</a>
+		<a href="javascript:;" onclick="_initCOA('Add','initCOA')" class="btn btn-warning radius"><i class="Hui-iconfont">&#xe667;</i> Initialize COA</a>
 		</span> <span class="r"></span> </div>
 	<div class="mt-20">
 		<table id="table" class="table table-border table-bordered table-bg table-hover table-sort table-responsive">
@@ -97,16 +98,19 @@ function refresh(){
 function _add(title,url){
 	layer_show(title,url);
 }
-/*编辑*/
-function user_edit(title,url){
-	console.log(title, url);
-	layer_show(title,url);
-	/* var index = layer.open({
-		type: 2,
-		title: title,
-		content: url
-	});
-	layer.full(index); */
+/*初始化系统默认char of account*/
+function _initCOA(){
+	$.post("initCOA", function(data, textStatus, jqXHR){
+		if(data.code == 101) { // 101 ajax error
+			layer.msg(data.message, {icon: 2, time:5000}, function(){layer.close(index)}); 
+		}else {
+			layer.msg("Successful", {icon:1, time:1000}, function(){
+				refresh();layer.close(index);
+			});
+		}
+	})
+	.error(function() { alert("error"); })
+    .complete(function(event,xhr,options) { console.log(xhr)});
 }
 /*批量删除*/
 function datadel(){
