--- a/bin/templates/system/account/chartOfAccountAdd.html
+++ b/bin/templates/system/account/chartOfAccountAdd.html
@@ -6,19 +6,19 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"></meta>
 <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"></meta>
 <meta http-equiv="Cache-Control" content="no-siteapp"></meta>
-<link rel="Bookmark" href="H-ui-admin-v3/favicon.ico" />
-<link rel="Shortcut Icon" href="H-ui-admin-v3/favicon.ico" />
+<link rel="Bookmark" href="/H-ui-admin-v3/favicon.ico" />
+<link rel="Shortcut Icon" href="/H-ui-admin-v3/favicon.ico" />
 <!--[if lt IE 9]>
-<script type="text/javascript" src="H-ui-admin-v3/lib/html5shiv.js"></script>
-<script type="text/javascript" src="H-ui-admin-v3/lib/respond.min.js"></script>
+<script type="text/javascript" src="/H-ui-admin-v3/lib/html5shiv.js"></script>
+<script type="text/javascript" src="/H-ui-admin-v3/lib/respond.min.js"></script>
 <![endif]-->
-<link rel="stylesheet" type="text/css" href="H-ui-admin-v3/static/h-ui/css/H-ui.min.css" />
-<link rel="stylesheet" type="text/css" href="H-ui-admin-v3/static/h-ui.admin/css/H-ui.admin.css" />
-<link rel="stylesheet" type="text/css" href="H-ui-admin-v3/lib/Hui-iconfont/1.0.8/iconfont.css" />
-<link rel="stylesheet" type="text/css" href="H-ui-admin-v3/static/h-ui.admin/skin/default/skin.css" id="skin" />
-<link rel="stylesheet" type="text/css" href="H-ui-admin-v3/static/h-ui.admin/css/style.css" />
+<link rel="stylesheet" type="text/css" href="/H-ui-admin-v3/static/h-ui/css/H-ui.min.css" />
+<link rel="stylesheet" type="text/css" href="/H-ui-admin-v3/static/h-ui.admin/css/H-ui.admin.css" />
+<link rel="stylesheet" type="text/css" href="/H-ui-admin-v3/lib/Hui-iconfont/1.0.8/iconfont.css" />
+<link rel="stylesheet" type="text/css" href="/H-ui-admin-v3/static/h-ui.admin/skin/default/skin.css" id="skin" />
+<link rel="stylesheet" type="text/css" href="/H-ui-admin-v3/static/h-ui.admin/css/style.css" />
 <!--[if IE 6]>
-<script type="text/javascript" src="H-ui-admin-v3/lib/DD_belatedPNG_0.0.8a-min.js" ></script>
+<script type="text/javascript" src="/H-ui-admin-v3/lib/DD_belatedPNG_0.0.8a-min.js" ></script>
 <script>DD_belatedPNG.fix('*');</script>
 <![endif]-->
 <title></title>
@@ -98,16 +98,16 @@
 </article>
 
 <!--_footer 作为公共模版分离出去--> 
-<script type="text/javascript" src="H-ui-admin-v3/lib/jquery/1.9.1/jquery.min.js"></script> 
-<script type="text/javascript" src="H-ui-admin-v3/lib/layer/2.4/layer.js"></script>
-<script type="text/javascript" src="H-ui-admin-v3/static/h-ui/js/H-ui.min.js"></script> 
-<script type="text/javascript" src="H-ui-admin-v3/static/h-ui.admin/js/H-ui.admin.js"></script> <!--/_footer 作为公共模版分离出去-->
+<script type="text/javascript" src="/H-ui-admin-v3/lib/jquery/1.9.1/jquery.min.js"></script> 
+<script type="text/javascript" src="/H-ui-admin-v3/lib/layer/2.4/layer.js"></script>
+<script type="text/javascript" src="/H-ui-admin-v3/static/h-ui/js/H-ui.min.js"></script> 
+<script type="text/javascript" src="/H-ui-admin-v3/static/h-ui.admin/js/H-ui.admin.js"></script> <!--/_footer 作为公共模版分离出去-->
 
 <!--请在下方写此页面业务相关的脚本-->
-<script type="text/javascript" src="H-ui-admin-v3/lib/My97DatePicker/4.8/WdatePicker.js"></script>
-<script type="text/javascript" src="H-ui-admin-v3/lib/jquery.validation/1.14.0/jquery.validate.js"></script> 
-<script type="text/javascript" src="H-ui-admin-v3/lib/jquery.validation/1.14.0/validate-methods.js"></script> 
-<script type="text/javascript" src="H-ui-admin-v3/lib/jquery.validation/1.14.0/messages_zh.js"></script> 
+<script type="text/javascript" src="/H-ui-admin-v3/lib/My97DatePicker/4.8/WdatePicker.js"></script>
+<script type="text/javascript" src="/H-ui-admin-v3/lib/jquery.validation/1.14.0/jquery.validate.js"></script> 
+<script type="text/javascript" src="/H-ui-admin-v3/lib/jquery.validation/1.14.0/validate-methods.js"></script> 
+<script type="text/javascript" src="/H-ui-admin-v3/lib/jquery.validation/1.14.0/messages_zh.js"></script> 
 <script type="text/javascript">
 $(function(){
 	
