--- a/src/main/resources/templates/system/account/journalVoucherMaster.html
+++ b/src/main/resources/templates/system/account/journalVoucherMaster.html
@@ -6,22 +6,22 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"></meta>
 <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"></meta>
 <meta http-equiv="Cache-Control" content="no-siteapp"></meta>
-<link rel="Bookmark" href="H-ui-admin-v3/favicon.ico" />
-<link rel="Shortcut Icon" href="H-ui-admin-v3/favicon.ico" />
+<link rel="Bookmark" href="/H-ui-admin-v3/favicon.ico" />
+<link rel="Shortcut Icon" href="/H-ui-admin-v3/favicon.ico" />
 <!--[if lt IE 9]>
-<script type="text/javascript" src="H-ui-admin-v3/lib/html5shiv.js"></script>
-<script type="text/javascript" src="H-ui-admin-v3/lib/respond.min.js"></script>
+<script type="text/javascript" src="/H-ui-admin-v3/lib/html5shiv.js"></script>
+<script type="text/javascript" src="/H-ui-admin-v3/lib/respond.min.js"></script>
 <![endif]-->
-<link rel="stylesheet" type="text/css" href="H-ui-admin-v3/static/h-ui/css/H-ui.min.css" />
-<link rel="stylesheet" type="text/css" href="H-ui-admin-v3/static/h-ui.admin/css/H-ui.admin.css" />
-<link rel="stylesheet" type="text/css" href="H-ui-admin-v3/lib/Hui-iconfont/1.0.8/iconfont.css" />
-<link rel="stylesheet" type="text/css" href="H-ui-admin-v3/static/h-ui.admin/skin/default/skin.css" id="skin" />
-<link rel="stylesheet" type="text/css" href="H-ui-admin-v3/static/h-ui.admin/css/style.css" />
+<link rel="stylesheet" type="text/css" href="/H-ui-admin-v3/static/h-ui/css/H-ui.min.css" />
+<link rel="stylesheet" type="text/css" href="/H-ui-admin-v3/static/h-ui.admin/css/H-ui.admin.css" />
+<link rel="stylesheet" type="text/css" href="/H-ui-admin-v3/lib/Hui-iconfont/1.0.8/iconfont.css" />
+<link rel="stylesheet" type="text/css" href="/H-ui-admin-v3/static/h-ui.admin/skin/default/skin.css" id="skin" />
+<link rel="stylesheet" type="text/css" href="/H-ui-admin-v3/static/h-ui.admin/css/style.css" />
 <style type="text/css">
 .docs-example:after{content: "Details";position: absolute;top: -1px;left: -1px;*position:static;padding: 3px 7px;font-size: 12px;font-weight: bold;background-color: #f5f5f5;border: 1px solid #ddd;color: #9da0a4;border-radius: 4px 0 4px 0}
 </style>
 <!--[if IE 6]>
-<script type="text/javascript" src="H-ui-admin-v3/lib/DD_belatedPNG_0.0.8a-min.js" ></script>
+<script type="text/javascript" src="/H-ui-admin-v3/lib/DD_belatedPNG_0.0.8a-min.js" ></script>
 <script>DD_belatedPNG.fix('*');</script>
 <![endif]-->
 <title></title>
@@ -67,15 +67,15 @@
 	</div>
 </div>
 <!--_footer 作为公共模版分离出去-->
-<script type="text/javascript" src="H-ui-admin-v3/lib/jquery/1.9.1/jquery.min.js"></script> 
-<script type="text/javascript" src="H-ui-admin-v3/lib/layer/2.4/layer.js"></script>
-<script type="text/javascript" src="H-ui-admin-v3/static/h-ui/js/H-ui.min.js"></script> 
-<script type="text/javascript" src="H-ui-admin-v3/static/h-ui.admin/js/H-ui.admin.js"></script> <!--/_footer 作为公共模版分离出去-->
+<script type="text/javascript" src="/H-ui-admin-v3/lib/jquery/1.9.1/jquery.min.js"></script> 
+<script type="text/javascript" src="/H-ui-admin-v3/lib/layer/2.4/layer.js"></script>
+<script type="text/javascript" src="/H-ui-admin-v3/static/h-ui/js/H-ui.min.js"></script> 
+<script type="text/javascript" src="/H-ui-admin-v3/static/h-ui.admin/js/H-ui.admin.js"></script> <!--/_footer 作为公共模版分离出去-->
 
 <!--请在下方写此页面业务相关的脚本-->
-<script type="text/javascript" src="H-ui-admin-v3/lib/My97DatePicker/4.8/WdatePicker.js"></script> 
-<script type="text/javascript" src="H-ui-admin-v3/lib/datatables/1.10.0/jquery.dataTables.min.js"></script> 
-<script type="text/javascript" src="H-ui-admin-v3/lib/laypage/1.2/laypage.js"></script>
+<script type="text/javascript" src="/H-ui-admin-v3/lib/My97DatePicker/4.8/WdatePicker.js"></script> 
+<script type="text/javascript" src="/H-ui-admin-v3/lib/datatables/1.10.0/jquery.dataTables.min.js"></script> 
+<script type="text/javascript" src="/H-ui-admin-v3/lib/laypage/1.2/laypage.js"></script>
 <script type="text/javascript">
 var table = $('.table-sort').DataTable({
 	"aaSorting": [[ 1, "desc" ]],//默认第几个排序
