--- a/src/main/resources/templates/system/user/userMaster.html
+++ b/src/main/resources/templates/system/user/userMaster.html
@@ -2,10 +2,10 @@
 <html xmlns="http://www.thymeleaf.org">
 <head>
 <meta charset="utf-8"></meta>
-<meta name="renderer" content="webkit|ie-comp|ie-stand"></meta>
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"></meta>
-<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"></meta>
-<meta http-equiv="Cache-Control" content="no-siteapp"></meta>
+<meta name="renderer" content="webkit|ie-comp|ie-stand" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
+<meta http-equiv="Cache-Control" content="no-siteapp" />
 <link rel="Bookmark" href="/H-ui-admin-v3/favicon.ico" />
 <link rel="Shortcut Icon" href="/H-ui-admin-v3/favicon.ico" />
 <!--[if lt IE 9]>
@@ -21,7 +21,7 @@
 <script type="text/javascript" src="/H-ui-admin-v3/lib/DD_belatedPNG_0.0.8a-min.js" ></script>
 <script>DD_belatedPNG.fix('*');</script>
 <![endif]-->
-<title>Product Menu</title>
+<title></title>
 </head>
 <body>
 <nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> Home <span class="c-gray en">&gt;</span> User Master  <a id="btn-refresh" class="btn btn-success radius r " style="line-height:1.6em;margin-top:3px" onclick="refresh()" title="刷新" ><i class="Hui-iconfont">&#xe68f;</i></a></nav>
@@ -31,7 +31,7 @@
 	<div class="cl pd-5 bg-1 bk-gray mt-20"> 
 		<span class="l">
 		<a href="javascript:;" onclick="datadel()" class="btn btn-danger radius"><i class="Hui-iconfont">&#xe6e2;</i> Delete</a> 
-		<a href="javascript:;" onclick="user_add('Add User','addUser?id=0')" class="btn btn-primary radius"><i class="Hui-iconfont">&#xe600;</i> Add User</a>
+		<a href="javascript:;" onclick="_add('Add','userAdd?id=0')" class="btn btn-primary radius"><i class="Hui-iconfont">&#xe600;</i> Add</a>
 		</span> <span class="r"></span> </div>
 	<div class="mt-20">
 		<table id="table" class="table table-border table-bordered table-bg table-hover table-sort table-responsive">
@@ -41,20 +41,20 @@
 					<th width="30">ID</th>
 					<th>UserName</th>
 					<th>Email</th>
-					<th>Join Date</th>
-					<th width="120">Operation</th>
+					<th>Expired Date</th>
+					<th>Operation</th>
 				</tr>
 			</thead>
 			<tbody>
-				<tr class="text-c" th:each="user,userStat : ${userList}"> 
-				     <td><input type="checkbox" th:value="${user.userId}" name="id"></input></td>
-				     <td th:text="${user.userId}">id</td>
-				     <td th:text="${user.username}">UserName</td>
+				<tr class="text-c" th:each="user : ${users}"> 
+				     <td><input type="checkbox" th:value="${user.id}" name="id"></input></td>
+				     <td th:text="${user.id}">id</td>
+				     <td th:text="${user.username}">username</td>
 				     <td th:text="${user.email}">email</td>
-				     <td th:text="${user.joinDate}">2017-07-01</td>
+				     <td th:text="${user.expired}">expired date</td>
 				     <td class="f-14 td-manage">
-				     <a style="text-decoration:none" class="ml-5" th:onclick="'javascript:user_add(\'Edit User\',\'addUser?id='+${user.userId}+'\');'" href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;</i></a> 
-				     <a style="text-decoration:none" class="ml-5" th:onclick="'javascript:user_del(this,'+${user.userId}+');'" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a>
+				     <a style="text-decoration:none" class="ml-5" th:onclick="'javascript:_add(\'Edit\',\'userAdd?id='+${user.id}+'\');'" href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;</i></a> 
+				     <a style="text-decoration:none" class="ml-5" th:onclick="'javascript:_del(this,'+${user.id}+');'" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a>
 				     </td>
 				 </tr>
 			</tbody>
@@ -78,7 +78,7 @@ var table = $('.table-sort').DataTable({
 	"pading":false,
 	"aoColumnDefs": [
 	  //{"bVisible": false, "aTargets": [ 3 ]} //控制列的隐藏显示
-	  {"orderable":false,"aTargets":[0,5]}// 不参与排序的列
+	  {"orderable":false,"aTargets":[0]}// 不参与排序的列
 	]
 });
 /*刷新*/
@@ -86,19 +86,22 @@ function refresh(){
 	location.replace(location.href);
 }
 /*添加 or 编辑*/
-function user_add(title,url){
+function _add(title,url){
 	layer_show(title,url);
 }
-/*编辑*/
-function user_edit(title,url){
-	console.log(title, url);
-	layer_show(title,url);
-	/* var index = layer.open({
-		type: 2,
-		title: title,
-		content: url
-	});
-	layer.full(index); */
+/*初始化系统默认char of account*/
+function _initCOA(){
+	$.post("initCOA", function(data, textStatus, jqXHR){
+		if(data.code == 101) { // 101 ajax error
+			layer.msg(data.message, {icon: 2, time:5000}, function(){layer.close(index)}); 
+		}else {
+			layer.msg("Successful", {icon:1, time:1000}, function(){
+				refresh();layer.close(index);
+			});
+		}
+	})
+	.error(function() { alert("error"); })
+    .complete(function(event,xhr,options) { console.log(xhr)});
 }
 /*批量删除*/
 function datadel(){
