--- a/src/main/resources/templates/system/index.html
+++ b/src/main/resources/templates/system/index.html
@@ -94,6 +94,7 @@
 			<dt><i class="Hui-iconfont">&#xe620;</i> Accountant<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
 			<dd>
 				<ul>
+					<li><a data-href="accountReceivableMaster" data-title="Account Receivable" href="javascript:void(0)">Account Receivable</a></li>
 					<li><a data-href="journalVoucherMaster" data-title="Journal Voucher" href="javascript:void(0)">Journal Voucher</a></li>
 					<li><a data-href="chartOfAccountMaster" data-title="Chart Of Account" href="javascript:void(0)">Chart Of Account</a></li>
 					<li><a data-href="generalLedgerMaster" data-title="General Ledger" href="javascript:void(0)">General Ledger</a></li>
